send_udp_message msg="try this oh yeah buddy"
open_udp_port
send_udp_message msg="try this oh yeah buddy"
open_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="try this oh yeah buddy"
close_udp_port
open_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="try this oh yeah buddy"
close_udp_port
open_udp_port
close_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="Hello from udp"
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="Hello from udp"
close_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="Hello from udp"
open_udp_port bindPort=48001 sendToPort=48000
close_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="hey"
send_udp_message msg="hey there is this okay"
send_udp_message msg="hey there is this okay uhhhhhh what is going on now"
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="come on man!"
send_udp_message msg="hey there is this okay uhhhhhh what is going on now"
send_udp_message msg="hi"
close_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_udp_message msg="hello from udp!"
close_udp_port
open_udp_port bindPort=48001 sendToPort=48000
send_message msg="Hi udp, nice to meet you!"
open_udp_port bindPort=48001 sendToPort=48000
send_message msg="Hello from udp!"
open_udp_port
send_udp_message msg="hello from udp"
send_udp_message msg="sdfnsldkjfn"
open_udp_port
send_udp_message msg="good to meet you udp"
close_udp_port
start_multiplayer_server
connect_to_multiplayer_server
start_multiplayer_server
connect_to_multiplayer_server
start_multiplayer_server
start_tcp_server
start_multiplayer_server
connect_to_multiplayer_server
send_message msg="hi server"
disconnect
start_multiplayer_server
connect_to_multiplayer_server
send_message msg="hi server"
start_multiplayer_server
send_message msg="hi client"
start_multiplayer_server
connect_to_multiplayer_server