@@ -281,3 +281,4 @@ start_multiplayer_server
 send_message msg="hi client"
 start_multiplayer_server
 connect_to_multiplayer_server
+start_tcp_server
